--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -3,6 +3,8 @@ name: Check PR Approval
 on:
   pull_request_review:
     types: [submitted]
+  pull_request:
+    types: [ opened, synchronize ]
     branches:
       - main
 
