--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 * @ml24-sys @tolebiermekov
 
 /config/other/docs/shared/* @ml24-sys
-/config/other/docs/* @tolebiermekov
+/config/other/docs/** @tolebiermekov
