--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -33,6 +33,7 @@ jobs:
           import urllib.error
           import logging
           from pathlib import Path
+          import shlex # <-- ИМПОРТИРУЕМ SHLEX
           
           logging.basicConfig(
               level=logging.INFO,
@@ -71,18 +72,32 @@ jobs:
           
           CODEOWNERS_FILE = '.github/CODEOWNERS-DWH'
           
+          # === НОВАЯ ЛОГИКА ПАРСИНГА (SHLEX) ===
           rules = []
           try:
               with open(CODEOWNERS_FILE, 'r') as f:
-                  for line in f:
-                      line = line.strip()
-                      if not line or line.startswith('#'):
+                  for line_number, line in enumerate(f, 1):
+                      # 1. Убираем комментарии и лишние пробелы
+                      line = line.split('#', 1)[0].strip()
+                      
+                      if not line:
                           continue
           
-                      parts = line.split()
+                      # 2. Используем shlex для "умного" разделения
+                      try:
+                          parts = shlex.split(line)
+                      except ValueError as e:
+                          logging.warning(f"Skipping malformed line {line_number}: {line} | Error: {e}")
+                          continue
+
+                      if not parts:
+                           continue
+                           
+                      # 3. Первый элемент - паттерн, остальные - владельцы
                       raw_pattern = parts[0]
                       owner_strings = parts[1:]
                       
+                      # 4. Вся остальная логика остается прежней
                       if raw_pattern.startswith('/'):
                           pattern = raw_pattern[1:]
                       else:
@@ -91,20 +106,23 @@ jobs:
                       if pattern == '*':
                           pattern = '**'
                       
-                      # === ВОТ ИЗМЕНЕНИЕ ===
-                      # pathlib.match с '**' не всегда включает файлы,
-                      # поэтому добавим '/*' для явного совпадения файлов
                       if pattern.endswith('/**'):
                           pattern = f"{pattern}/*"
-                      # === КОНЕЦ ИЗМЕНЕНИЯ ===
 
                       owners = set(o.replace('@', '') for o in owner_strings if '/' not in o)
+                      
+                      if not owners:
+                          logging.warning(f"No owners found for pattern on line {line_number}: {raw_pattern}")
+                          continue
+                          
                       rules.append({'pattern': pattern, 'owners': owners})
           
           except FileNotFoundError:
               fail(f"Failed to read {CODEOWNERS_FILE}: File not found.")
           except Exception as e:
               fail(f"Failed to parse {CODEOWNERS_FILE}: {e}")
+          
+          # === КОНЕЦ НОВОЙ ЛОГИКИ ПАРСИНГА ===
           
           try:
               files_url = f'https://api.github.com/repos/{owner}/{repo}/pulls/{pr_number}/files'
