--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -72,22 +72,15 @@ jobs:
                   fail(f"Failed to get PR context: {e}")
 
           def parse_codeowners(filepath):
-              """
-              Parses the CODEOWNERS file.
-              This is the core logic for translating .gitignore-style
-              patterns into patterns that `pathlib` can understand.
-              """
               rules = []
               try:
                   with open(filepath, 'r') as f:
                       for line_number, line in enumerate(f, 1):
-                          # Strip comments and whitespace *before* parsing.
                           line = line.split('#', 1)[0].strip()
                           if not line:
                               continue
                           
                           try:
-                              # Correctly handles paths in quotes or with backslash-escaped spaces
                               parts = shlex.split(line)
                           except ValueError as e:
                               logging.warning(f"Skipping malformed line {line_number}: {line} | Error: {e}")
@@ -104,11 +97,10 @@ jobs:
                           elif raw_pattern == '**':
                               patterns_to_check.append('**')
                           elif raw_pattern.startswith('/'):
-                              # Root-anchored path. Only one pattern.
                               patterns_to_check.append(raw_pattern[1:])
                           else:
-                              patterns_to_check.append(raw_pattern)
-                              patterns_to_check.append(f"**/{raw_pattern}")
+                              patterns_to_check.append(raw_pattern)  
+                              patterns_to_check.append(f"**/{raw_pattern}") 
           
                           final_patterns = []
                           for p in patterns_to_check:
@@ -138,7 +130,7 @@ jobs:
 
           def get_approved_users(owner, repo, pr_number):
               reviews_url = f'https://api.github.com/repos/{owner}/{repo}/pulls/{pr_number}/reviews'
-              reviews_json = make_request(reviews_json)
+              reviews_json = make_request(reviews_url)
               approved_users = {
                   review['user']['login']
                   for review in reviews_json
@@ -147,9 +139,7 @@ jobs:
               return approved_users
 
           def check_file_coverage(changed_files, rules, approved_users):
-              """Checks every changed file against the ruleset."""
               uncovered_files_list = []
-              
               reversed_rules = list(reversed(rules))
 
               for file_path in changed_files:
@@ -158,9 +148,9 @@ jobs:
                       for pattern in rule['patterns']:
                           if file_path.match(pattern):
                               found_owners = rule['owners']
-                              break
+                              break 
                       if found_owners:
-                          break # Stop checking other rules (First Match Wins)
+                          break # (First Match Wins)
                   
                   if not found_owners:
                       logging.warning(f"File {file_path} has no owner in CODEOWNERS-DWH. Failing.")
@@ -179,18 +169,19 @@ jobs:
               try:
                   if not TOKEN:
                       fail("GITHUB_TOKEN is not set.")
-          
+                      
                   owner, repo, pr_number = get_pr_context()
+                  
                   rules = parse_codeowners(CODEOWNERS_FILE)
                   changed_files = get_changed_files(owner, repo, pr_number)
                   approved_users = get_approved_users(owner, repo, pr_number)
-          
+
                   if not approved_users:
                       fail('No "Approve" found on this PR.')
                   logging.info(f"Found approvals from: {', '.join(approved_users)}")
-          
+
                   uncovered_files = check_file_coverage(changed_files, rules, approved_users)
-          
+                  
                   if uncovered_files:
                       uncovered_files_str = '\n'.join(uncovered_files)
                       error_message = (
