--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -2,7 +2,7 @@ name: Check PR Approval
 
 on:
   pull_request:
-    types: [ opened, synchronize, reopened ]
+    types: [ synchronize ]
     branches:
       - main
   pull_request_review:
