--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -8,6 +8,9 @@ permissions:
   pull-requests: read
   contents: read
 
+env:
+  UV_SYSTEM_PYTHON: 1
+
 jobs:
   check-approvals:
     runs-on: ubuntu-latest
@@ -19,6 +22,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "0.9.8"
+          enable-cache: true
+
+      - name: Install dependencies
+        run: uv pip install requests==2.32.5
 
       - name: Check Approvals
         env:
