--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -14,13 +14,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Install uv
+        
+      - name: Install uv and Python
         uses: astral-sh/setup-uv@v7
         with:
+          python-version: '3.12'
           version: "0.9.8"
-          python-version: "3.12"
-          enable-cache: true
 
       - name: Install dependencies
         run: uv pip install requests==2.32.5
@@ -28,4 +27,4 @@ jobs:
       - name: Check Approvals
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: uv run .github/scripts/check_approvals.py
+        run: uv run python .github/scripts/check_approvals.py
