--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -22,7 +22,7 @@ jobs:
           version: "0.9.8"
 
       - name: Install dependencies
-        run: uv pip install requests==2.32.5
+        run: uv sync requests==2.32.5
 
       - name: Check Approvals
         env:
