--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -20,9 +20,10 @@ jobs:
         with:
           python-version: '3.12'
           version: "0.9.8"
+          activate-environment: true
 
       - name: Install dependencies
-        run: uv sync requests==2.32.5
+        run: uv pip install requests==2.32.5
 
       - name: Check Approvals
         env:
