--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -4,6 +4,9 @@ on:
   pull_request_review:
     types: [submitted]
 
+  pull_request:
+    types: [synchronize]
+
 permissions:
   pull-requests: read
   contents: read
